# MiniBoostRestAPI

./: .clang-format  CMakeLists.txt  README.md  TODOs.md  config.yaml
.github/workflows/: cmake-single-platform.yml
include/: context.hpp  person.hpp  person_controller.hpp  person_request_handler.hpp  person_serializer.hpp  person_service.hpp  request_handler.hpp  router.hpp  server.hpp
include/controllers/: person_controller.hpp
include/models/: person.hpp
include/serializers/: person_serializer.hpp
include/services/: person_service.hpp
src/: context.cpp  main.cpp  person_controller.cpp  person_request_handler.cpp  person_serializer.cpp  person_service.cpp  router.cpp  server.cpp
src/controllers/: person_controller.cpp
src/models/: person.cpp
src/serializers/: person_serializer.cpp
src/services/: person_service.cpp
tests/: README.md  e2e.py  e2e.sh  e2e_test.py  requirements.txt
